# cryptologie

Canal/WM_TRELLIS/: WM_TRELLIS.cpp  WM_TRELLIS.hpp  main.cpp  tp2
Cesar/: Cesar.py
Hamming/src/: Copilot.java  Hamming.java
Huffman/: BuildHuffmanTree.cpp  BuildHuffmanTree.hpp  CMakeLists.txt  CoupleMessageProba.hpp  Table.cpp  Table.hpp  mainHuffman.cpp
LZW/: BitIO.cpp  BitIO.hpp  CMakeLists.txt  DeclarationDesDroitsDeLHomme.txt  Dictionnaire.cpp  Dictionnaire.hpp  Lzw.cpp  Lzw.hpp  SequenceMessages.cpp  SequenceMessages.hpp  lzw.dev.txt  main.cpp
